# not_rimworld

./: CMakeLists.txt
.cache/clangd/index/: camera.c.23D34FC4DAD5444D.idx  camera.h.3E995DCC3077D076.idx  core.c.F256AEBF24127867.idx  game.c.C61EF7C0648A4C4D.idx  game.h.080A2AA893651F0B.idx  global.h.B7C7B655E0460300.idx  init.c.26C1338D8ECCB18F.idx  init.h.885BA34CC2660D33.idx  main.c.9B6E688B50BAAEDA.idx  pawn.c.C53E574BC8D6FEB3.idx  pawn.h.EAF3CEA93A4A99C5.idx  pawn_manager.c.A527CB100E4B8BDD.idx  pawn_manager.h.94687FF165D5FD2D.idx  remath.h.FE9147785EE36777.idx  renderer.c.CD729E012E831A7E.idx  renderer.h.3ADAD8F9FD02FB62.idx  texture_manager.c.6E397063FC7F3E04.idx  texture_manager.h.05449D62B768D23C.idx  ui.c.04F96865F8C4DEBE.idx  ui.h.A3B0C52A50749B1C.idx  window.c.D9780892C8598ECF.idx  window.h.FB09D905A7A702E7.idx  world.c.94CE0C77EDD0DBF8.idx  world.h.ADDD8FB194665176.idx
include/core/: global.h  init.h  renderer.h  window.h
include/game/: camera.h  game.h  mouse.h  particle_manager.h  pawn_manager.h  texture_manager.h  ui.h  world.h
include/game/item_manager/: inventory.h  item.h
include/game/ui/: footer_ui.h  ui.h
include/utils/: remath.h
src/core/: init.c  renderer.c  window.c
src/game/: camera.c  game.c  mouse.c  particle_manager.c  pawn_manager.c  texture_manager.c  ui.c  world.c
src/game/item_manager/: inventory.c  item.c
src/utils/: remath.c
